--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -151,7 +151,7 @@
                                 <div class="card__title">@Localizer["InternetConnection"]</div>
                                 <div class="card__text">
                                     <span>@Localizer["CurrentSpeed"] <strong class="fadeInOnAfterPageLoad"><span
-                                                id="card_download">0</span>@Localizer["SpeedPerSecond"]</strong></span>
+                                                id="card_download">0 Bytes</span>@Localizer["SpeedPerSecond"]</strong></span>
                                 </div>
                             </div>
                             <div class="card__media">
