--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -302,7 +302,7 @@
                 <h5>@Localizer["System"]</h5>
                 <div class="fadeInOnAfterPageLoad">
                     <div class="system-mini">
-                        <p>@Localizer["ConnectedMini"]<br><span name="info_hostname"></span></p>
+                        <p>@Localizer["ConnectedMini"]<br><span name="info_hostname">&nbsp;</span></p>
                         <div class="system__panel">
                             <div>
                                 <p class="system__color system__color_line1">
@@ -329,25 +329,25 @@
                             <div>
                                 <p class="system__color system__color_line2">
                                     <span>@Localizer["SystemPlatform"]</span><br>
-                                    <span name="info_platform"></span>
+                                    <span name="info_platform">&nbsp;</span>
                                 </p>
                             </div>
                             <div>
                                 <p class="system__color system__color_line2">
                                     <span>@Localizer["SystemPid"]</span><br>
-                                    <span name="info_pid"></span>
+                                    <span name="info_pid">&nbsp;</span>
                                 </p>
                             </div>
                             <div>
                                 <p class="system__color system__color_line2">
                                     <span>@Localizer["SystemArch"]</span><br>
-                                    <span name="info_arch"></span><br>
+                                    <span name="info_arch">&nbsp;</span><br>
                                 </p>
                             </div>
                             <div>
                                 <p class="system__color system__color_line2">
                                     <span>@Localizer["SystemVersion"]</span><br>
-                                    <span name="info_version"></span>
+                                    <span name="info_version">&nbsp;</span>
                                 </p>
                             </div>
                         </div>
