--- a/src/Sinedo/Views/Shared/Content.cshtml
+++ b/src/Sinedo/Views/Shared/Content.cshtml
@@ -8,11 +8,11 @@
     <meta charset="utf-8" />
     <title>@Localizer["App"] - @ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=3.0">
-    <link rel="stylesheet" href="/css/fonts.css">
+    <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/icons.css">
     <link rel="stylesheet" href="/css/button.css">
     <link rel="stylesheet" href="/css/input.css">
-    <link rel="stylesheet" href="/css/content.css">
 </head>
 <body>
     <main>
