Korrekturen am Design.

--- a/src/Sinedo/Views/Index/Login.cshtml
+++ b/src/Sinedo/Views/Index/Login.cshtml
@@ -5,6 +5,9 @@
     ViewData["Title"] = Localizer["Title"];
 }
 
+<div style="height: 9vh;">
+
+</div>
 <h4 class="title">@Localizer["Title"]</h4>
 <p>@Localizer["Description"]</p>
 
