BugFix: Benennung im Safari Schlüsselbund.

--- a/src/Sinedo/Views/Index/Login.cshtml
+++ b/src/Sinedo/Views/Index/Login.cshtml
@@ -15,6 +15,9 @@
 <form method="post">
     <div class="textbox__wrapper">
         <div class="textbox">
+            <input name="username" id="username_field" type="text" value="Sinedo" hidden/>
+            @* <label for="username_field"></label> *@
+
             <input name="password" id="password_field" type="password"/>
             <label for="password_field">@Localizer["Password"]</label>
         </div>
