Korrektur: Schriftfarbe bei Autofill.

--- a/src/Sinedo/wwwroot/css/input.css
+++ b/src/Sinedo/wwwroot/css/input.css
@@ -33,3 +33,7 @@ input:focus {
     border-color: var(--input-focus) !important;
     outline-style: none;
 }
+
+input:autofill + label {
+  color: black;
+}
