--- a/src/Sinedo/wwwroot/css/animations.css
+++ b/src/Sinedo/wwwroot/css/animations.css
@@ -2,6 +2,10 @@
     0% {opacity:0;}
     100% {opacity:1;}
   }
+  @keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+  }
 
   .fadeInOnAfterPageLoad {
       animation-name: fadeIn;
