--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -204,7 +204,7 @@
                             title='@Localizer["HardDiskUsage"]'>@Localizer["NoScript"]</canvas>
                 </div>
                 <div class="fadeInOnAfterPageLoad" style="min-height: 54px;">
-                    <div id="diskOnline" hidden>
+                    <div id="diskOnline"idden>
                         <p>
                             @Html.Raw(String.Format(Localizer["StorageDescription"].Value,
                                 "<strong><span id='disk_free'>0 GB</span></strong>",
@@ -212,7 +212,7 @@
                             ) 
                         </p>
                     </div>
-                    <div id="diskOffline">
+                    <div id="diskOffline" hidden>
                         <p>@Localizer["FolderNotFound"]</p>
                     </div>
                 </div>
