--- a/src/Sinedo/Views/Index/Change.cshtml
+++ b/src/Sinedo/Views/Index/Change.cshtml
@@ -15,6 +15,9 @@
 <form method="post">
     <div class="textbox__wrapper">
         <div class="textbox">
+            <input name="username" id="username_field" type="text" value="Sinedo" hidden/>
+            @* <label for="username_field"></label> *@
+
             <input name="newPassword" id="password_field" type="password" autocomplete="new-password"/>
             <label for="password_field">@Localizer["NewPassword"]</label>
         </div>
