BugFix: Kein Benutzername für Passwortmanager.

--- a/src/Sinedo/Views/Index/Setup.cshtml
+++ b/src/Sinedo/Views/Index/Setup.cshtml
@@ -13,8 +13,11 @@
 
 
 <form method="post">
-    <div class="textbox__wrapper">
+    <div class="textbox__wrapper">  
         <div class="textbox">
+            <input name="username" id="username_field" type="text" value="Sinedo" hidden/>
+            @* <label for="username_field"></label> *@
+
             <input name="newPassword" id="password_field" type="password"/>
             <label for="password_field">@Localizer["Password"]</label>
         </div>
