Aufgeräumt, Logging-Fenster hinzugefügt.

--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" type="image/png" href="/images/manifest/icon-256.png" sizes="256x256" />
     <link rel="apple-touch-icon" type="image/png" href="/images/manifest/icon-512.png" sizes="512x512" />
 
-    <meta name="theme-color" media="(prefers-color-scheme:dark)" content="#BB86FC">
+    <meta name="theme-color" media="(prefers-color-scheme:dark)" content="black">
     <meta name="theme-color" media="(prefers-color-scheme:light)" content="#FFAB40">
 
     <link rel="manifest" href="/manifest.json">
