--- a/src/Sinedo/Views/Index/Settings.cshtml
+++ b/src/Sinedo/Views/Index/Settings.cshtml
@@ -2,7 +2,7 @@
 @inject IViewLocalizer Localizer
 @model Sinedo.Models.SettingsRecord
 @{
-    Layout = "Content";
+    Layout = "Layout";
     ViewData["Title"] = Localizer["Title"];
 }
 
