--- a/src/Sinedo/Views/Index/Change.cshtml
+++ b/src/Sinedo/Views/Index/Change.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
-    Layout = "Content";
+    Layout = "Layout";
     ViewData["Title"] = Localizer["Title"];
 }
 
@@ -37,7 +37,7 @@
     }
 
     <button class="dialog-button square-button" type="submit" name="save">
-            <span>@Localizer["Save"]</span>
+        <span>@Localizer["Save"]</span>
     </button>
 </form>
 
