--- a/src/Sinedo/wwwroot/css/button.css
+++ b/src/Sinedo/wwwroot/css/button.css
@@ -126,3 +126,20 @@
     padding-bottom: 5px;
     padding-top: 5px;
   }
+
+  .big-square-button {
+    height: auto;
+    border-style: solid;
+    border-width: 1px;
+    padding: 16px;
+  }
+
+  .big-square-button p {
+    margin-top: 8px;
+    margin-bottom: 1px;
+  }
+
+  .menu-button {
+    width: 100%;
+    margin-bottom: 8px;
+  }
