--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -103,6 +103,7 @@
                                             <span hidden data-side="server" data-exception='Sinedo.Exceptions.AccountExpiredException'>@Localizer["List:AccountExpiredException"]</span>
                                             <span hidden data-side="server" data-exception='Sinedo.Exceptions.InvalidResponseException'>@Localizer["List:InvalidResponseException"]</span>
                                             <span hidden data-side="server" data-exception='Sinedo.Exceptions.MissingCredentialsException'>@Localizer["List:MissingCredentialsException"]</span>
+                                            <span hidden data-side="server" data-exception='Sinedo.Exceptions.ExceededTrafficException'>@Localizer["List:ExceededTrafficException"]</span>
                                         </span>
                                     </span>
                                     <span data-state="running">
