Logs GUI fertiggestellt.

--- a/src/Sinedo/Views/Index/Index.cshtml
+++ b/src/Sinedo/Views/Index/Index.cshtml
@@ -307,7 +307,7 @@
 
 
             <div class="panel">
-                <h5>@Localizer["System"]</h5>
+                <h5><a href="Logs" class="hidden-link">@Localizer["System"]</a></h5>
                 <div class="fadeInOnAfterPageLoad">
                     <div class="system-mini">
                         <p>@Localizer["ConnectedMini"]<br><span name="info_hostname">&nbsp;</span></p>
